--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=5000
 
 # database connection url
-DATABASE_URL=mongodb+srv://practice:practice1234@cluster0.ktfe5gd.mongodb.net/phuniversity?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL=mongodb+srv://practice:practice1234@cluster0.ktfe5gd.mongodb.net/car?retryWrites=true&w=majority&appName=Cluster0
 
 # bcrypt salt rounds
 BCRYPT_SALT_ROUNDS=10
