Added filter ad countDocument into QueryBuilder
- Updated getAllServicesFromDB to search,filter,sort and paginate

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DATABASE_URL=mongodb+srv://practice:practice1234@cluster0.ktfe5gd.mongodb.net/ca
 
 # bcrypt salt rounds
 BCRYPT_SALT_ROUNDS=10
-DEFAULT_PASS=phuniversity!@#
+DEFAULT_PASS=user1234
 
 # node environement
 NODE_ENV=development
