--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "stripe": "^16.12.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
